Move dto and entity to common-library